使用 Colaboratory 创建

--- a/site/zh-cn/tutorials/keras/文本分类.ipynb
+++ b/site/zh-cn/tutorials/keras/文本分类.ipynb
@@ -3,6 +3,16 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/Yangyu66666/Deep_learning/blob/main/site/zh-cn/tutorials/keras/%E6%96%87%E6%9C%AC%E5%88%86%E7%B1%BB.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "Ic4_occAAiAT"
       },
       "source": [
@@ -119,10 +129,10 @@
       "execution_count": 2,
       "metadata": {
         "id": "6-tTFS04dChr",
-        "outputId": "d9a1a432-a214-47b4-846d-c0ccdc2c5feb",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "d9a1a432-a214-47b4-846d-c0ccdc2c5feb"
       },
       "outputs": [
         {
@@ -187,10 +197,10 @@
       "execution_count": 12,
       "metadata": {
         "id": "355CfOvsV1pl",
-        "outputId": "61d7a51a-9237-48e6-86c5-6d4900f898ed",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "61d7a51a-9237-48e6-86c5-6d4900f898ed"
       },
       "outputs": [
         {
@@ -213,10 +223,10 @@
       "execution_count": 13,
       "metadata": {
         "id": "7ASND15oXpF1",
-        "outputId": "f2a02f0e-c555-46c1-8fa2-0cfd6ecda6b0",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "f2a02f0e-c555-46c1-8fa2-0cfd6ecda6b0"
       },
       "outputs": [
         {
@@ -256,10 +266,10 @@
       "execution_count": 14,
       "metadata": {
         "id": "R7g8hFvzWLIZ",
-        "outputId": "77c61814-a804-42f8-ff43-a1c7efa5abe5",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "77c61814-a804-42f8-ff43-a1c7efa5abe5"
       },
       "outputs": [
         {
@@ -311,10 +321,10 @@
       "execution_count": 15,
       "metadata": {
         "id": "VhejsClzaWfl",
-        "outputId": "76fbfa83-0203-435a-af45-1d6dbe5605aa",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "76fbfa83-0203-435a-af45-1d6dbe5605aa"
       },
       "outputs": [
         {
@@ -359,10 +369,10 @@
       "execution_count": 16,
       "metadata": {
         "id": "nOrK-MTYaw3C",
-        "outputId": "d27cb788-a9ee-41b2-e4e9-609fbea0716f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "d27cb788-a9ee-41b2-e4e9-609fbea0716f"
       },
       "outputs": [
         {
@@ -403,10 +413,10 @@
       "execution_count": 17,
       "metadata": {
         "id": "51wNaPPApk1K",
-        "outputId": "aa2875bf-8b62-4a43-a996-71015675c1ee",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "aa2875bf-8b62-4a43-a996-71015675c1ee"
       },
       "outputs": [
         {
@@ -445,10 +455,10 @@
       "execution_count": 18,
       "metadata": {
         "id": "MlICTG8spyO2",
-        "outputId": "3c257f69-7bd4-4e49-ade3-b1122271ee4a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "3c257f69-7bd4-4e49-ade3-b1122271ee4a"
       },
       "outputs": [
         {
@@ -488,10 +498,10 @@
       "execution_count": 19,
       "metadata": {
         "id": "JsMwwhOoqjKF",
-        "outputId": "cc2c05c2-23aa-46c3-bad5-3dd41972354b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "cc2c05c2-23aa-46c3-bad5-3dd41972354b"
       },
       "outputs": [
         {
@@ -518,10 +528,10 @@
       "execution_count": 20,
       "metadata": {
         "id": "rdSr0Nt3q_ns",
-        "outputId": "e9fb8c2b-c3a0-4fbc-e94f-eace11fd993b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "e9fb8c2b-c3a0-4fbc-e94f-eace11fd993b"
       },
       "outputs": [
         {
@@ -669,7 +679,8 @@
         "  text = tf.expand_dims(text, -1)\n",
         "#这行代码使用tf.expand_dims()函数在文本数据text上添加一个维度。在原始数据中，文本数据是一个形状为(batch_size, )的张量，其中batch_size是批量大小。\n",
         "#通过tf.expand_dims()，我们在最后一个维度上添加一个新的维度，使得文本数据变成一个形状为(batch_size,1)的张量。\n",
-        "#这是因为在输入TextVectorization层时，它需要接受一个形状为(batch_size,) 或 (batch_size,sequence_length)的张量，其中sequence_length是文本序列的长度。通过添加新维度，我们将文本数据变成了一个二维张量，以便正确输入到TextVectorization层中。\n",
+        "#这是因为在输入TextVectorization层时，它需要接受一个形状为(batch_size,) 或 (batch_size,sequence_length)的张量，\n",
+        "#其中sequence_length是文本序列的长度。通过添加新维度，我们将文本数据变成了一个二维张量，以便正确输入到TextVectorization层中。\n",
         "  return vectorize_layer(text), label"
       ]
     },
@@ -678,10 +689,10 @@
       "execution_count": 28,
       "metadata": {
         "id": "XULcm6B3xQIO",
-        "outputId": "a793de18-c175-4046-a834-0dd68edccc83",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "a793de18-c175-4046-a834-0dd68edccc83"
       },
       "outputs": [
         {
@@ -719,7 +730,8 @@
       ],
       "source": [
         "# retrieve a batch (of 32 reviews and labels) from the dataset\n",
-        "text_batch, label_batch = next(iter(raw_train_ds)) #raw_train_ds并不是一个张量，而是一个数据集对象。数据集对象中的每个样本批次都包含了张量形状为(batch_size, )的文本数据和张量形状为 (batch_size, ) 的标签。这些张量都是一维的，\n",
+        "text_batch, label_batch = next(iter(raw_train_ds))\n",
+        "#raw_train_ds并不是一个张量，而是一个数据集对象。数据集对象中的每个样本批次都包含了张量形状为(batch_size, )的文本数据和张量形状为 (batch_size, ) 的标签。这些张量都是一维的，\n",
         "first_review, first_label = text_batch[1], label_batch[1]\n",
         "print(\"Review\", first_review)\n",
         "print(\"Label\", raw_train_ds.class_names[first_label])\n",
@@ -740,10 +752,10 @@
       "execution_count": 29,
       "metadata": {
         "id": "kRq9hTQzhVhW",
-        "outputId": "e34ca0e4-3233-4a41-f4b7-b2671b69ec5a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "e34ca0e4-3233-4a41-f4b7-b2671b69ec5a"
       },
       "outputs": [
         {
@@ -817,9 +829,12 @@
         "val_ds = val_ds.cache().prefetch(buffer_size=AUTOTUNE)\n",
         "test_ds = test_ds.cache().prefetch(buffer_size=AUTOTUNE)\n",
         "#这段代码使用了TensorFlow 的数据预取（prefetch）和数据缓存（cache）功能来优化数据集的处理和加载，以提高模型训练的性能。\n",
-        "#AUTOTUNE = tf.data.AUTOTUNE: 这里定义了一个常量 AUTOTUNE，它是一个特殊值，用于自动选择最佳的参数值，以最大程度地加速数据处理。AUTOTUNE 可以用于数据加载和预处理的多个参数中，例如缓存大小、并行处理等\n",
+        "#AUTOTUNE = tf.data.AUTOTUNE: 这里定义了一个常量 AUTOTUNE，它是一个特殊值，用于自动选择最佳的参数值，以最大程度地加速数据处理。\n",
+        "#UTOTUNE 可以用于数据加载和预处理的多个参数中，例如缓存大小、并行处理等\n",
         "#cache(): 缓存方法将数据集的内容缓存到内存中，以避免在每个训练迭代中重新加载数据。这样，在模型训练期间，数据将从内存中快速读取，提高了训练速度。\n",
-        "#prefetch(buffer_size=AUTOTUNE): 预取方法允许数据在训练时异步加载和预处理。buffer_size=AUTOTUNE 表示 TensorFlow 将根据可用的系统资源自动选择预取的批量大小，以最大化训练的吞吐量。通过预取，在当前批次被处理时，下一个批次的数据已经在后台被加载和准备好，从而减少了训练过程中的数据加载时间。#"
+        "#prefetch(buffer_size=AUTOTUNE): 预取方法允许数据在训练时异步加载和预处理。\n",
+        "#buffer_size=AUTOTUNE表示TensorFlow将根据可用的系统资源自动选择预取的批量大小，以最大化训练的吞吐量。\n",
+        "#通过预取，在当前批次被处理时，下一个批次的数据已经在后台被加载和准备好，从而减少了训练过程中的数据加载时间。"
       ]
     },
     {
@@ -849,10 +864,10 @@
       "execution_count": 35,
       "metadata": {
         "id": "xpKOoWgu-llD",
-        "outputId": "874b7d86-65da-473f-d0ad-fc49faebde65",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "874b7d86-65da-473f-d0ad-fc49faebde65"
       },
       "outputs": [
         {
@@ -884,7 +899,8 @@
       ],
       "source": [
         "model = tf.keras.Sequential([\n",
-        "  layers.Embedding(max_features + 1, embedding_dim), #max_features+1：这表示词汇表的大小，包括一个保留索引（0）用于表示未在词汇表中出现的单词或标记。在这个例子中，词汇表大小为 10001，包括了 10000 个不同的单词或标记，以及一个保留索引0\n",
+        "  layers.Embedding(max_features + 1, embedding_dim),\n",
+        "#max_features+1：这表示词汇表的大小，包括一个保留索引（0）用于表示未在词汇表中出现的单词或标记。在这个例子中，词汇表大小为10001，包括了10000个不同的单词或标记，以及一个保留索引0\n",
         "  layers.Dropout(0.2),\n",
         "  layers.GlobalAveragePooling1D(), #变成(batch_size,16)，即对每一列做平均\n",
         "  layers.Dropout(0.2),\n",
@@ -892,10 +908,12 @@
         "\n",
         "model.summary()\n",
         "#250维的文本变成250*16的矩阵（一行相当于原来的一个单词）\n",
-        "#layers.Embedding层的输入是一个整数张量(batch_size, 250)，表示一个批次的文本序列。假设你的文本序列已经被转换成了整数形式，每个整数代表词汇表中的一个单词或标记。假设每个文本序列的长度为250个整数（维度为250）\n",
-        "#layers.Embedding层的输出是一个张量(batch_size, 250, 16)，表示对输入整数序列的嵌入表示。每个整数索引都被映射为一个密集的嵌入向量，其维度为 embedding_dim。所以输出的维度为 (batch_size, 250, embedding_dim)。\n",
-        "#layers.Dropout(0.2) 的作用是在训练过程中，随机地将每个样本中的每个嵌入向量中的 20% 值置为 0。注意，是针对嵌入向量的每个值进行丢弃，而不是整个嵌入向量。这样做是为了防止模型过拟合，并且增加模型对输入的鲁棒性。\n",
-        "#所以，经过 layers.Dropout(0.2) 后，输出张量仍然保持与输入张量相同的形状 (batch_size, 250, embedding_dim)，但其中的 20% 的值将被设置为 0"
+        "#layers.Embedding层的输入是一个整数张量(batch_size, 250)，表示一个批次的文本序列。假设你的文本序列已经被转换成了整数形式，每个整数代表词汇表中的一个单词或标记。\n",
+        "#假设每个文本序列的长度为250个整数（维度为250）\n",
+        "#layers.Embedding层的输出是一个张量(batch_size, 250, 16)，表示对输入整数序列的嵌入表示。每个整数索引都被映射为一个密集的嵌入向量，其维度为embedding_dim。\n",
+        "#layers.Dropout(0.2) 的作用是在训练过程中，随机地将每个样本中的每个嵌入向量中的 20% 值置为 0。注意，是针对嵌入向量的每个值进行丢弃，而不是整个嵌入向量。\n",
+        "#这样做是为了防止模型过拟合，并且增加模型对输入的鲁棒性。\n",
+        "#所以，经过 layers.Dropout(0.2) 后，输出张量仍然保持与输入张量相同的形状 (batch_size, 250, embedding_dim)，但其中的20%的值将被设置 0"
       ]
     },
     {
@@ -954,10 +972,10 @@
       "execution_count": 37,
       "metadata": {
         "id": "tXSGrjWZ-llW",
-        "outputId": "2acf0516-ea98-43de-a900-1ff6d50c48e6",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "2acf0516-ea98-43de-a900-1ff6d50c48e6"
       },
       "outputs": [
         {
@@ -1011,10 +1029,10 @@
       "execution_count": 38,
       "metadata": {
         "id": "zOMKywn4zReN",
-        "outputId": "909b5e96-d22c-4a6f-f817-a654805e4f73",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "909b5e96-d22c-4a6f-f817-a654805e4f73"
       },
       "outputs": [
         {
@@ -1059,10 +1077,10 @@
       "execution_count": 39,
       "metadata": {
         "id": "-YcvZsdvWfDf",
-        "outputId": "8a2d4cbb-6078-45a2-b91c-aabfec6e7b88",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "8a2d4cbb-6078-45a2-b91c-aabfec6e7b88"
       },
       "outputs": [
         {
@@ -1095,11 +1113,11 @@
       "execution_count": 40,
       "metadata": {
         "id": "2SEMeQ5YXs8z",
-        "outputId": "e401d31d-c214-4b6f-feba-57adb1a6b831",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 472
-        }
+        },
+        "outputId": "e401d31d-c214-4b6f-feba-57adb1a6b831"
       },
       "outputs": [
         {
@@ -1138,11 +1156,11 @@
       "execution_count": 41,
       "metadata": {
         "id": "Z3PJemLPXwz_",
-        "outputId": "1a716d06-0fcb-4bf0-8ad0-44bd02d4f626",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 472
-        }
+        },
+        "outputId": "1a716d06-0fcb-4bf0-8ad0-44bd02d4f626"
       },
       "outputs": [
         {
@@ -1198,10 +1216,10 @@
       "execution_count": 42,
       "metadata": {
         "id": "FWXsMvryuZuq",
-        "outputId": "6f20bb8e-abdd-430c-9449-b3e18738a8b4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "6f20bb8e-abdd-430c-9449-b3e18738a8b4"
       },
       "outputs": [
         {
@@ -1247,10 +1265,10 @@
       "execution_count": 45,
       "metadata": {
         "id": "QW355HH5L49K",
-        "outputId": "cfe05738-4c1b-40df-f67c-881e9594be8f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "cfe05738-4c1b-40df-f67c-881e9594be8f"
       },
       "outputs": [
         {
@@ -1360,7 +1378,8 @@
     "colab": {
       "name": "text_classification.ipynb",
       "toc_visible": true,
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
